update BufferPool